# mineru-api

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml
api/: app.py  tasks.py
api/services/: __init__.py  pdf_processor.py
samples/output/: sample.md  sample_content_list.json  sample_middle.json
