[project]
name = "mineru-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.32.5",
    "magic-pdf>=1.3.12",
    "opencv-python==4.10.0.84",
    "matplotlib>=3.10,<4",
    "ultralytics>=8.3.48,<9",
    "doclayout_yolo==0.0.2b1",
    "dill>=0.3.8,<1",
    "rapid_table>=1.0.5,<2.0.0",
    "PyYAML>=6.0.2,<7",
    "ftfy>=6.3.1,<7",
    "openai>=1.70.0,<2",
    "shapely>=2.0.7,<3",
    "pyclipper>=1.3.0,<2",
    "omegaconf>=2.3.0,<3",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.3",
    "gunicorn>=23.0.0",
    "celery>=5.5.3",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
]

[dependency-groups]
lint = [
    "ruff>=0.11.13",
]
